# pytheos

./: .gitignore  LICENSE  README.md  TODO.md  pyproject.toml  pytest.ini
.github/workflows/: python-app.yml  tests.yml
data/: ionic_radii.yaml
docs/: funding.md  general_tips.md  important_papers.md  publications.md  tips.md  todo.md
examples/: MgCoNiCuZnO_vasp.ipynb  NiO_vasp.ipynb  README.md  check_allocations.py  example_magorder.yaml  generate_SQSs.ipynb  generate_disordered_supercells.ipynb  magorder_NiO_AFMII.yaml  make_sqs.ipynb  materials_project.ipynb  perovskite_symmetry_breaking.ipynb  sample_api_key.env  vasp_MgO.ipynb
examples/MgCoNiCuZnO_files/: MgCoNiCuZnO_sqs_prim4x4x4.vasp
examples/SQS_structures/: sqs_Mg13Co13Ni13Cu13Zn12O64.vasp
examples/docs/: sqs_Mg200Co200Ni200Cu200Zn200O1000.vasp  sqs_Mg32Ni32O64.vasp
examples/perovskite_files/: SrNbO3_unitcell.vasp  SrTiO3_unitcell.vasp
notebooks/: README.md  chemical_potential_overlap.ipynb  chempot_overlap.ipynb  perovskite_symmetry_breaking.ipynb
notebooks/MgCoNiCuZnO_files/: sqs_generation.out  (+1 more)
pytheos/: chgnet.py  feff.py  materials_project.py  mlip.py  structure.py  submission.py  utils.py  vasp.py
resources/: TIPS.md  check_allocations.py  check_slurm_allocations.py  example.env  readme.md  submitvasp
scripts/: check_allocations.py  cstdn_vasp_doublerelax.py  cstdn_vasp_doublerelax_kpoints.py  grad2  potcar_scrambler.py
structures/: README.md  perovskite_Pm-3m_SrTiO3.vasp  perovskite_Pnma_CaTiO3.vasp  rocksalt_Fm-3m_MgO.vasp  spinel_Fd-3m_Co3O4.vasp
tests/: pytest.ini  test_utils.py
(+119 files in other folders)
